common-applications/freesky-icsl-hk-cluster/mindspore-doc-search/doc-search-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/limit-rpm: 200
  name: doc-search-ingress
  namespace: mindspore-doc-search
spec:
  rules:
  - host: search.mindspore.myopeninfra.com
    http:
      paths:
      - backend:
          serviceName: doc-search-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - search.mindspore.myopeninfra.com
    secretName: doc-search-tls
